--- a/Front/exam/src/app/app.component.html
+++ b/Front/exam/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-sidebar></app-sidebar>
-<app-addplayer></app-addplayer>
-<app-addteam></app-addteam>
+<app-sidebar></app-sidebar> <!-- Barre latérale gauche -->
+<div class="main-content">
+    <app-addplayer></app-addplayer>
+    <app-addteam></app-addteam>
+</div>
+<app-team-recap></app-team-recap> <!-- Barre latérale droite -->
