--- a/Front/exam/src/app/app.component.html
+++ b/Front/exam/src/app/app.component.html
@@ -1,6 +1,9 @@
-<app-sidebar></app-sidebar> <!-- Barre latérale gauche -->
-<div class="main-content">
-    <app-addplayer></app-addplayer>
-    <app-addteam></app-addteam>
+<app-header></app-header> <!-- Bandeau supérieur -->
+<div class="main-layout">
+    <app-sidebar></app-sidebar> <!-- Barre latérale gauche -->
+    <div class="main-content">
+        <app-addplayer></app-addplayer>
+        <app-addteam></app-addteam>
+    </div>
+    <app-team-recap></app-team-recap> <!-- Barre latérale droite -->
 </div>
-<app-team-recap></app-team-recap> <!-- Barre latérale droite -->
