--- a/Front/exam/src/app/sidebar/sidebar.component.css
+++ b/Front/exam/src/app/sidebar/sidebar.component.css
@@ -11,6 +11,7 @@
   z-index: 1000;
   transition: width 0.3s ease; /* Animation de la largeur */
   font-family: Arial, sans-serif; /* Police Arial */
+  margin-top: 60px;
 }
 
 .sidebar-container.collapsed {
