--- a/Front/exam/src/app/team-recap/team-recap.component.css
+++ b/Front/exam/src/app/team-recap/team-recap.component.css
@@ -11,6 +11,7 @@
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
   font-family: Arial, sans-serif;
+  margin-top: 60px;
 }
 
 h2 {
