--- a/Front/exam/src/app/app.component.html
+++ b/Front/exam/src/app/app.component.html
@@ -2,8 +2,7 @@
 <div class="main-layout">
     <app-sidebar></app-sidebar> <!-- Barre latérale gauche -->
     <div class="main-content">
-        <app-addplayer></app-addplayer>
-        <app-addteam></app-addteam>
+      <router-outlet></router-outlet>
     </div>
     <app-team-recap></app-team-recap> <!-- Barre latérale droite -->
 </div>
