--- a/Front/exam/src/app/header/header.component.html
+++ b/Front/exam/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
   <div class="logo-section">
-    <img src="https://via.placeholder.com/50" alt="App Logo" />
+    <img src="https://i.ibb.co/17W0V7t/soccer-player-3.png" alt="App Logo" />
     <h1>My Sports App</h1>
   </div>
   <nav class="nav-links">
