--- a/Front/exam/src/app/team-recap/team-recap.component.css
+++ b/Front/exam/src/app/team-recap/team-recap.component.css
@@ -1,6 +1,6 @@
 .recap-container {
   width: 300px;
-  height: 100vh;
+  height:calc(100vh - 60px);
   background-color: #f5f5f5;
   color: #333;
   position: fixed;
