--- a/Front/exam/src/app/header/header.component.html
+++ b/Front/exam/src/app/header/header.component.html
@@ -1,11 +1,13 @@
 <div class="header-container">
   <div class="logo-section">
-    <img src="https://i.ibb.co/17W0V7t/soccer-player-3.png" alt="App Logo" />
-    <h1>My Sports App</h1>
+    <a routerLink="/home" routerLinkActive="active">
+      <img src="https://i.ibb.co/17W0V7t/soccer-player-3.png" alt="App Logo" />
+    </a>
+    <a routerLink="/home" routerLinkActive="active"><h1>Sports Manager</h1></a>
   </div>
   <nav class="nav-links">
-    <a href="#teams">Teams</a>
-    <a href="#players">Players</a>
-    <a href="#matches">Matches</a>
+    <a routerLink="/teams" routerLinkActive="active">Teams</a>
+    <a routerLink="/players" routerLinkActive="active">Players</a>
+    <a routerLink="/matches" routerLinkActive="active">Matches</a>
   </nav>
 </div>
