add news and hour

--- a/Front/exam/src/app/header/header.component.html
+++ b/Front/exam/src/app/header/header.component.html
@@ -9,5 +9,6 @@
     <a routerLink="/teams" routerLinkActive="active">Teams</a>
     <a routerLink="/players" routerLinkActive="active">Players</a>
     <a routerLink="/matches" routerLinkActive="active">Matches</a>
+    <a routerLink="/news" routerLinkActive="active">News</a>
   </nav>
 </div>
