--- a/Front/exam/src/app/home/home.component.css
+++ b/Front/exam/src/app/home/home.component.css
@@ -40,3 +40,32 @@ p {
 .welcome-btn:hover {
   background-color: #1e7e34;
 }
+
+.date-time {
+  margin: 20px auto; /* Centre horizontalement et ajoute un espace vertical */
+  font-size: 20px;
+  color: #555;
+  background-color: #cccccc;
+  width: 50%;
+  height: 100%;
+  border-radius: 8px;
+  text-align: center; /* Centre le contenu textuel */
+  padding: 10px; /* Ajoute un espace interne pour le contenu */
+}
+
+.date-time .current-date,
+.date-time .current-time {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.date-time .current-time {
+  font-weight: bold;
+  font-size: 22px;
+  color: #4caf50;
+}
+
+.carousel {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
