--- a/Front/exam/src/app/carousel/carousel.component.html
+++ b/Front/exam/src/app/carousel/carousel.component.html
@@ -7,6 +7,7 @@
     <img [src]="article.urlToImage" alt="{{ article.title }}" />
     <h2>{{ article.title }}</h2>
     <p>{{ article.description }}</p>
+    <a [href]="article.url" target="_blank">Read more</a>
   </div>
 </div>
 
