--- a/Front/exam/src/app/home/home.component.css
+++ b/Front/exam/src/app/home/home.component.css
@@ -1,14 +1,13 @@
 .welcome-container {
   width: 95%;
-  max-width: 800px;
-  margin: 50px auto;
+  margin: 20px auto;
   text-align: center;
   font-family: Arial, sans-serif;
   color: #333;
 }
 
 h1 {
-  font-size: 36px;
+  text-align: center;
   color: #4caf50;
   margin-bottom: 20px;
 }
