--- a/Front/exam/src/app/sidebar/sidebar.component.html
+++ b/Front/exam/src/app/sidebar/sidebar.component.html
@@ -5,11 +5,36 @@
   <div class="menu-content" *ngIf="!isCollapsed">
     <a routerLink="/home" routerLinkActive="active"><h2>Menu</h2></a>
     <ul class="menu-list">
+      <!-- Players Section -->
       <li>
-        <a routerLink="/add-player" routerLinkActive="active">Add Player</a>
+        <div class="section-header" (click)="toggleSection('players')">
+          <h3>Players</h3>
+          <span>{{ openSection === 'players' ? '-' : '+' }}</span>
+        </div>
+        <ul class="submenu" *ngIf="openSection === 'players'">
+          <li>
+            <a routerLink="/add-player" routerLinkActive="active">Add a player</a>
+          </li>
+          <li>
+            <a routerLink="/delete-player" routerLinkActive="active">Delete a player</a>
+          </li>
+        </ul>
       </li>
+
+      <!-- Teams Section -->
       <li>
-        <a routerLink="/add-team" routerLinkActive="active">Add Team</a>
+        <div class="section-header" (click)="toggleSection('teams')">
+          <h3>Teams</h3>
+          <span>{{ openSection === 'teams' ? '-' : '+' }}</span>
+        </div>
+        <ul class="submenu" *ngIf="openSection === 'teams'">
+          <li>
+            <a routerLink="/add-team" routerLinkActive="active">Add a team</a>
+          </li>
+          <li>
+            <a routerLink="/delete-team" routerLinkActive="active">Delete a team</a>
+          </li>
+        </ul>
       </li>
     </ul>
   </div>
