--- a/Front/exam/src/app/sidebar/sidebar.component.html
+++ b/Front/exam/src/app/sidebar/sidebar.component.html
@@ -18,6 +18,9 @@
           <li>
             <a routerLink="/delete-player" routerLinkActive="active">Delete a player</a>
           </li>
+          <li>
+            <a routerLink="/update-player" routerLinkActive="active">Update a player</a>
+          </li>
         </ul>
       </li>
 
@@ -33,6 +36,9 @@
           </li>
           <li>
             <a routerLink="/delete-team" routerLinkActive="active">Delete a team</a>
+          </li>
+          <li>
+            <a routerLink="/update-team" routerLinkActive="active">Update a team</a>
           </li>
         </ul>
       </li>
