--- a/Front/exam/src/app/sidebar/sidebar.component.html
+++ b/Front/exam/src/app/sidebar/sidebar.component.html
@@ -42,6 +42,28 @@
           </li>
         </ul>
       </li>
+
+      <!-- Matches Section -->
+      <li>
+        <div class="section-header" (click)="toggleSection('matches')">
+          <h3>Matches</h3>
+          <span>{{ openSection === 'teams' ? '-' : '+' }}</span>
+        </div>
+        <ul class="submenu" *ngIf="openSection === 'matches'">
+          <li>
+            <a routerLink="/add-match" routerLinkActive="active">Add a match</a>
+          </li>
+          <li>
+            <a routerLink="/delete-match" routerLinkActive="active">Delete a match</a>
+          </li>
+          <li>
+            <a routerLink="/update-match" routerLinkActive="active">Update a match</a>
+          </li>
+          <li>
+            <a routerLink="/fill-points" routerLinkActive="active">Fill points</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </div>
 </div>
