--- a/Front/exam/src/app/matches/matches.component.css
+++ b/Front/exam/src/app/matches/matches.component.css
@@ -58,3 +58,17 @@ h1 {
 .match-table td {
   vertical-align: middle; /* Aligne le contenu verticalement au centre */
 }
+
+.team-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+
+.team-info span {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  line-height: 1;
+}
