--- a/Front/exam/src/app/deletematches/deletematches.component.html
+++ b/Front/exam/src/app/deletematches/deletematches.component.html
@@ -8,7 +8,7 @@
       <div class="logo-preview">
         <img *ngIf="selectedMatch.team1Logo" [src]="selectedMatch.team1Logo" alt="Team 1 Logo" />
       </div>
-      <label>Team 1: {{ selectedMatch.team1Name }}</label>
+      <label>Team 1: {{ selectedMatch.team1Name | uppercase }}</label>
     </div>
 
     <!-- VS Box -->
@@ -19,25 +19,21 @@
       <div class="logo-preview">
         <img *ngIf="selectedMatch.team2Logo" [src]="selectedMatch.team2Logo" alt="Team 2 Logo" />
       </div>
-      <label>Team 2: {{ selectedMatch.team2Name }}</label>
+      <label>Team 2: {{ selectedMatch.team2Name | uppercase }}</label>
     </div>
   </div>
 
   <!-- Détails du match -->
+  <div class="match-date-time" *ngIf="selectedMatch">
+    <p><strong>Date:</strong> {{ selectedMatch.matchDate | date: 'dd/MM/yyyy' }}</p>
+    <p *ngIf="selectedMatch.matchTime"><strong>Time:</strong> {{ formatTimeTo24Hour(selectedMatch.matchTime) }}</p>
+    <p *ngIf="!selectedMatch.matchTime"><strong>Time:</strong> N/A</p>
+  </div>
+
   <form class="form-fields" *ngIf="selectedMatch">
     <div class="form-group">
       <label for="location">Location</label>
       <input type="text" id="location" [(ngModel)]="selectedMatch.location" readonly />
-    </div>
-
-    <div class="form-group">
-      <label for="date">Date</label>
-      <input type="date" id="date" [(ngModel)]="selectedMatch.date" readonly />
-    </div>
-
-    <div class="form-group">
-      <label for="time">Time</label>
-      <input type="time" id="time" [(ngModel)]="selectedMatch.time" readonly />
     </div>
 
     <button
@@ -64,10 +60,13 @@
   <ul class="search-results">
     <li *ngFor="let match of filteredMatches" (click)="selectMatch(match)">
       <div class="match-info">
-        <p><strong>Teams:</strong> {{ match.team1Name }} vs {{ match.team2Name }}</p>
+        <p><strong>Teams:</strong> {{ match.homeTeam?.name | uppercase }} <strong>VS</strong> {{ match.awayTeam?.name | uppercase }}</p>
         <p><strong>Location:</strong> {{ match.location }}</p>
-        <p><strong>Date:</strong> {{ match.date }}</p>
-        <p><strong>Time:</strong> {{ match.time }}</p>
+      </div>
+      <div class="match-info">
+        <p><strong>Date:</strong> {{ match.matchDate | date: 'dd/MM/yyyy' }}</p>
+        <p *ngIf="match.matchTime"><strong>Time:</strong> {{ formatTimeTo24Hour(match.matchTime) | date: 'hh:mm a' }}</p>
+        <p *ngIf="!match.matchTime"><strong>Time:</strong> N/A</p>
       </div>
     </li>
   </ul>
