--- a/Front/exam/src/app/deleteteam/deleteteam.component.html
+++ b/Front/exam/src/app/deleteteam/deleteteam.component.html
@@ -22,6 +22,7 @@
         <input
           type="text"
           id="name"
+          name="teamName"
           class="form-control"
           [(ngModel)]="selectedTeam.name"
           readonly
@@ -33,6 +34,7 @@
         <input
           type="text"
           id="city"
+          name="teamCity"
           class="form-control"
           [(ngModel)]="selectedTeam.city"
           readonly
@@ -44,6 +46,7 @@
         <input
           type="text"
           id="stadium"
+          name="teamStadium"
           class="form-control"
           [(ngModel)]="selectedTeam.stadium"
           readonly
