--- a/Front/exam/src/app/sidebar/sidebar.component.html
+++ b/Front/exam/src/app/sidebar/sidebar.component.html
@@ -47,7 +47,7 @@
       <li>
         <div class="section-header" (click)="toggleSection('matches')">
           <h3>Matches</h3>
-          <span>{{ openSection === 'teams' ? '-' : '+' }}</span>
+          <span>{{ openSection === 'matches' ? '-' : '+' }}</span>
         </div>
         <ul class="submenu" *ngIf="openSection === 'matches'">
           <li>
