--- a/Front/exam/src/app/deletematches/deletematches.component.css
+++ b/Front/exam/src/app/deletematches/deletematches.component.css
@@ -3,19 +3,19 @@
   max-width: 700px;
   margin: 20px auto;
   padding: 20px;
-  border: 2px solid #d32f2f;
+  border: 2px solid #ff5722;
   border-radius: 12px;
-  background: linear-gradient(145deg, #ffebee, #ffcdd2);
+  background: linear-gradient(145deg, #ffe9e9, #ffc8c8);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   font-family: Arial, sans-serif;
 }
 
 h2 {
   text-align: center;
-  color: #d32f2f;
+  color: #ff5722;
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .form-layout {
@@ -23,6 +23,8 @@ h2 {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 .team-section {
@@ -32,9 +34,9 @@ h2 {
 }
 
 .logo-preview {
-  width: 120px;
-  height: 120px;
-  border: 2px dashed #d32f2f;
+  width: 140px;
+  height: 140px;
+  border: 2px dashed #ff5722;
   border-radius: 8px;
   background-color: #fff;
   display: flex;
@@ -50,7 +52,7 @@ h2 {
 }
 
 .vs-box {
-  background-color: #d32f2f;
+  background-color: #ff5722;
   color: white;
   font-size: 32px;
   font-weight: bold;
@@ -75,16 +77,19 @@ h2 {
 
 input {
   width: 100%;
-  padding: 12px;
-  border: 2px solid #d32f2f;
+  padding: 10px;
+  border: 2px solid #ff5722;
   border-radius: 8px;
-  font-size: 16px;
+  font-size: 14px;
   background-color: #f9f9f9;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  height: 41px;
 }
 
 button {
   padding: 12px;
-  background-color: #d32f2f;
+  background-color: #ff5722;
   color: white;
   border: none;
   border-radius: 8px;
@@ -98,18 +103,18 @@ button {
 }
 
 button:hover {
-  background-color: #b71c1c;
+  background-color: #e64a19;
 }
 
 button:disabled {
-  background-color: #ef9a9a;
+  background-color: #bfbfbf;
   cursor: not-allowed;
 }
 
 .search-bar input {
   width: 100%;
   padding: 12px;
-  border: 2px solid #d32f2f;
+  border: 2px solid #ff5722;
   border-radius: 8px;
   font-size: 14px;
 }
@@ -122,7 +127,7 @@ button:disabled {
 
 .search-results li {
   padding: 12px;
-  border: 2px solid #d32f2f;
+  border: 2px solid #ff5722;
   border-radius: 8px;
   background-color: #fff;
   margin-bottom: 10px;
@@ -130,7 +135,7 @@ button:disabled {
 }
 
 .search-results li:hover {
-  background-color: #ffcdd2;
+  background-color: #ffe6e6;
 }
 
 p {
