add last part, looking for add guy who point

--- a/Front/exam/src/app/deletematches/deletematches.component.html
+++ b/Front/exam/src/app/deletematches/deletematches.component.html
@@ -8,7 +8,7 @@
       <div class="logo-preview">
         <img *ngIf="selectedMatch.team1Logo" [src]="selectedMatch.team1Logo" alt="Team 1 Logo" />
       </div>
-      <label>Team 1: {{ selectedMatch.team1Name | uppercase }}</label>
+      <label>{{ selectedMatch.homeTeam?.name | uppercase }}</label>
     </div>
 
     <!-- VS Box -->
@@ -19,21 +19,21 @@
       <div class="logo-preview">
         <img *ngIf="selectedMatch.team2Logo" [src]="selectedMatch.team2Logo" alt="Team 2 Logo" />
       </div>
-      <label>Team 2: {{ selectedMatch.team2Name | uppercase }}</label>
+      <label>{{ selectedMatch.awayTeam?.name | uppercase }}</label>
     </div>
   </div>
 
   <!-- Détails du match -->
   <div class="match-date-time" *ngIf="selectedMatch">
     <p><strong>Date:</strong> {{ selectedMatch.matchDate | date: 'dd/MM/yyyy' }}</p>
-    <p *ngIf="selectedMatch.matchTime"><strong>Time:</strong> {{ formatTimeTo24Hour(selectedMatch.matchTime) }}</p>
+    <p *ngIf="selectedMatch.matchTime"><strong>Time:</strong> {{ formatTimeTo24Hour(selectedMatch.matchTime)| date: 'hh:mm a' }}</p>
     <p *ngIf="!selectedMatch.matchTime"><strong>Time:</strong> N/A</p>
   </div>
 
   <form class="form-fields" *ngIf="selectedMatch">
     <div class="form-group">
-      <label for="location">Location</label>
-      <input type="text" id="location" [(ngModel)]="selectedMatch.location" readonly />
+      <label><strong>Location: </strong></label>
+      <label>{{ selectedMatch.location}}</label>
     </div>
 
     <button
