--- a/Front/exam/src/app/updatematches/updatematches.component.html
+++ b/Front/exam/src/app/updatematches/updatematches.component.html
@@ -30,31 +30,39 @@
 
   <!-- Update Form Fields -->
   <form class="form-fields" *ngIf="selectedMatch">
+    <!-- Location -->
     <div class="form-group">
       <label for="location">Location</label>
       <input
         type="text"
         id="location"
         [(ngModel)]="selectedMatch.location"
+        name="location"
         placeholder="Enter new location"
       />
     </div>
 
+    <!-- Date -->
     <div class="form-group">
       <label for="matchDate">Date</label>
       <input
         type="date"
         id="matchDate"
         [(ngModel)]="selectedMatch.matchDate"
+        name="matchDate"
+        [value]="formatDateForInput(selectedMatch.matchDate)"
       />
     </div>
 
+    <!-- Time -->
     <div class="form-group">
       <label for="matchTime">Time</label>
       <input
         type="time"
         id="matchTime"
         [(ngModel)]="selectedMatch.matchTime"
+        name="matchTime"
+        [value]="formatTimeForInput(selectedMatch.matchTime)"
       />
     </div>
 
