--- a/Front/exam/src/app/rankings/rankings.component.html
+++ b/Front/exam/src/app/rankings/rankings.component.html
@@ -15,19 +15,12 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <td>1</td>
-        <td>John Doe</td>
-        <td>Forward</td>
-        <td>Team Alpha</td>
-        <td>150</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Jane Smith</td>
-        <td>Goalkeeper</td>
-        <td>Team Beta</td>
-        <td>140</td>
+      <tr *ngFor="let player of topPlayers; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>{{ player.name }}</td>
+        <td>{{ player.position }}</td>
+        <td>{{ player.team?.name }}</td>
+        <td>{{ player.points }}</td>
       </tr>
       </tbody>
     </table>
@@ -47,19 +40,14 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <td>1</td>
-        <td><img src="https://via.placeholder.com/40" alt="Team Alpha Logo" /></td>
-        <td>Team Alpha</td>
-        <td>Paris</td>
-        <td>20</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td><img src="https://via.placeholder.com/40" alt="Team Beta Logo" /></td>
-        <td>Team Beta</td>
-        <td>Lyon</td>
-        <td>18</td>
+      <tr *ngFor="let team of topTeams; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>
+          <img *ngIf="team.logoPath" [src]="team.logoPath" alt="{{ team.name }} Logo" width="40" height="40" />
+        </td>
+        <td>{{ team.name }}</td>
+        <td>{{ team.city }}</td>
+        <td>{{ team.wins }}</td>
       </tr>
       </tbody>
     </table>
@@ -78,17 +66,11 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <td>2024-12-25</td>
-        <td>Team Alpha</td>
-        <td>Team Beta</td>
-        <td>Stadium A</td>
-      </tr>
-      <tr>
-        <td>2024-12-26</td>
-        <td>Team Gamma</td>
-        <td>Team Delta</td>
-        <td>Stadium B</td>
+      <tr *ngFor="let match of upcomingMatches">
+        <td>{{ match.matchDate | date: 'dd/MM/yyyy' }}</td>
+        <td>{{ match.homeTeam?.name }}</td>
+        <td>{{ match.awayTeam?.name }}</td>
+        <td>{{ match.location }}</td>
       </tr>
       </tbody>
     </table>
